--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -50,4 +50,4 @@ One controversial decision we made with Spruce is to leave a classical grid syst
 
 ## Color Purple
 
-Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn’t copy the color from Boostrap, unlike many other things. 😐
+Choosing a “brand” color is hard because all of them are taken. After we realized that all of our stuff uses blue, we made the boldest choice and picked purple. We swear we didn’t copy the color from Bootstrap, unlike many other things. 😐
