--- a/src/blog/why-use-sass.mdx
+++ b/src/blog/why-use-sass.mdx
@@ -17,29 +17,29 @@ It isn’t a CSS competitor; it is something that complements it. You still writ
 
 The same generic question as always and also the same answer: it depends on your need, on your context.
 
-I think Sass can improve any project. Sure it gives an extra layer, but in the world of the CSS-in-JS solutions, I don’t think it is a big problem.
-It is still helpful for a simple project because it is easy to set up and use through npm scripts. You can use its basic functionalities like the modules and nesting.
-If you are serious, it does not disappoint. Sass has more intermediate and advanced tools to help you build anything complex like your own CSS framework.
+- I think Sass can improve any project. Sure it gives an extra layer, but in the world of the CSS-in-JS solutions, I don’t think it is a big problem.
+- It is still helpful for a simple project because it is [easy to set up](http://localhost:8000/blog/the-simplest-sass-compile-setup) and use through npm scripts. You can use its basic functionalities like the modules and nesting.
+- If you are serious, it does not disappoint. Sass has many intermediate and advanced tools to help you build anything complex like your own CSS framework.
 
-Sass is a little bit for CSS, like jQuery for JavaScript. It shows a direction. Today we have variables in plain CSS (which is a different variable, a more powerful one), too, which is progress.
+Sass is a little bit for CSS, like jQuery for JavaScript. It shows a direction related to new features. Today we have [variables in plain CSS](https://developer.mozilla.org/en-US/docs/Web/CSS/--*) (a different type of variable, a more powerful one), which is progress.
 
 So do we need it? I use it in almost all my projects because it is comfortable. I also use it for Spruce because it shows its true power there.
 
 ## @use and @forward
 
-Sass has a modular import system, similar to the JS modules. It replaced the classic @import rule. The @import wasn’t an advanced solution; it worked like the CSS one, except it “merged” the imported file.
+Sass has a modular import system, similar to the JS modules. It replaced the classic `@import` rule. The `@import` wasn’t an advanced solution; it worked like the CSS one, except it “merged” the imported files.
 
 Now - using [@use](https://sass-lang.com/documentation/at-rules/use) or [@forward](https://sass-lang.com/documentation/at-rules/forward) - you can create namespaces when importing. You must import (@use) the dependency in any file you need (no more global import), but in the compiled result, it will be present only once.
 
-At first, it can be more complicated than the regular @import, but in the long run, it is superior.
+At first, it can be more complicated than the regular import rule, but in the long run, it is superior.
 
-Spruce CSS uses the module system. If you want to import it (after npm install), you need to use the following code:
+Spruce CSS uses the module system. If you want to import it (after `npm install`), you need to use the following code:
 
 ```scss
 @use 'sprucecss/scss/spruce';
 ```
 
-Because of the filename, you will get the “spruce” namespace. To import it without a namespace, you can do the following:
+Because of the filename, you will get the “spruce” namespace by default. To import it without a namespace, you can do the following:
 
 ```scss
 @use 'sprucecss/scss/spruce' as *;
@@ -93,7 +93,7 @@ $breakpoints: (
 }
 ```
 
-Mixins can generate bigger chunks of content too. In Spruce, the [generators](https://sprucecss.com/docs/elements/generators) do this. Including this framework with @use in your project doesn’t generate any CSS code by default. You need to call one of the generator mixins.
+Mixins can generate bigger chunks of content too. In Spruce, the [generators](https://sprucecss.com/docs/elements/generators) do this. Including this framework with `@use` in your project doesn’t generate any CSS code by default. You need to call one of the generator mixins.
 
 The functions in Sass are similar to any function you know. It gets a value and returns something. You can make a lot of cool stuff with them. One frequent example is making a getter from a map:
 
