--- a/src/blog/why-use-sass.mdx
+++ b/src/blog/why-use-sass.mdx
@@ -18,7 +18,7 @@ It isn’t a CSS competitor; it is something that complements it. You still writ
 The same generic question as always and also the same answer: it depends on your need, on your context.
 
 - I think Sass can improve any project. Sure it gives an extra layer, but in the world of the CSS-in-JS solutions, I don’t think it is a big problem.
-- It is still helpful for a simple project because it is [easy to set up](http://localhost:8000/blog/the-simplest-sass-compile-setup) and use through npm scripts. You can use its basic functionalities like the modules and nesting.
+- It is still helpful for a simple project because it is [easy to set up](https://sprucecss.com/blog/the-simplest-sass-compile-setup) and use through npm scripts. You can use its basic functionalities like the modules and nesting.
 - If you are serious, it does not disappoint. Sass has many intermediate and advanced tools to help you build anything complex like your own CSS framework.
 
 Sass is a little bit for CSS, like jQuery for JavaScript. It shows a direction related to new features. Today we have [variables in plain CSS](https://developer.mozilla.org/en-US/docs/Web/CSS/--*) (a different type of variable, a more powerful one), which is progress.
