--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -11,11 +11,12 @@ Get color value by key and type name from the `$colors` map. The `$colors` map i
 
 ### Argument(s)
 
-| Name              | Default Value | Description                                                     |
-|-------------------|---------------|-----------------------------------------------------------------|
-| `$key`            |               | The name of the color.                                          |
-| `$type`           | `base`        | The group of the color.                                         |
-| `$only-color`     | `false`       | Wheater to get just the color value or the CSS custom property. |
+| Name              | Default Value | Description                                                       |
+|-------------------|---------------|-------------------------------------------------------------------|
+| `$key`            |               | The name of the color.                                            |
+| `$type`           | `base`        | The group of the color.                                           |
+| `$only-color`     | `false`       | Wheater to get just the color value or the CSS custom property.   |
+| `$map`            | `$colors`     | The name of the map from which the function will get the values.  |
 
 
 [View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_color.scss#L6)
@@ -29,6 +30,27 @@ a {
 
 .has-error {
   color: spruce.color(danger, alert);
+}
+```
+
+## color-contrast
+
+Get a contrast color (black or white) based on the given one. Spruce use this function internally at [selection](/docs/sass/mixins#selection) mixin.
+
+### Argument(s)
+
+| Name              | Description          |
+|-------------------|----------------------|
+| `$color`          | Any color value.     |
+
+
+[View Source on GitHub](https://github.com/conedevelopment/sprucecss/blob/main/scss/function/_color.scss#L29)
+
+### Example(s)
+
+```scss
+a {
+  color: spruce.color-contrast(blue); // return white (hsl(0 0% 100%))
 }
 ```
 
