--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -22,7 +22,7 @@ We call it framework because we didn’t know how to call it. It is clearly a fr
 
 <Notification type="info" icon={true}>Spruce UI will be a separate sister project of Spruce CSS, where you will find pre-built components. We plan to start to work on it at the end of this year (2022).</Notification>
 
-## Some Opinionated Thoughts
+## Some Thoughts
 
 - We don’t want to compete or compered with other CSS frameworks. We think almost all of them are great - we learn(t) a lot from them. Besides, they have weaknesses and greatnesses, too, like Spruce CSS.
 - Although it has some design opinions, it is not something to help you design (User Interfaces). The goal is to give you the correct patterns and a small system to help you create manageable projects in the long run; the UI is your job.
