Add GitHub links

--- a/src/docs/customization/settings.mdx
+++ b/src/docs/customization/settings.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Settings'
 order: 9
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/customization/settings.mdx'
 ---
 
 <p class="lead">In Spruce CSS, the settings are global options controlled through a Sass map.</p>
