--- a/src/docs/elements/buttons.mdx
+++ b/src/docs/elements/buttons.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Buttons'
 order: 17
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/buttons.mdx'
 ---
 
 <p className="lead">Spruce comes with basic button variations like size, width, color, state and can also generate your custom color variants.</p>
