--- a/src/docs/elements/forms.mdx
+++ b/src/docs/elements/forms.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Forms'
 order: 18
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/forms.mdx'
 ---
 
 <p class="lead">Spruce comes with an overall (WIP) form support like styling the different types of inputs or validation.</p>
