--- a/src/docs/elements/generators.mdx
+++ b/src/docs/elements/generators.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Generators'
 order: 14
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/generators.mdx'
 ---
 
 <p class="lead">The generators are special (a naming convention in Spruce CSS only) mixins, which we use to generate base styles.</p>
