--- a/src/docs/elements/media.mdx
+++ b/src/docs/elements/media.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Media'
 order: 18
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/media.mdx'
 ---
 
 <p class="lead">Under media, you can find some of the media-related styles and utilities.</p>
