--- a/src/docs/elements/tables.mdx
+++ b/src/docs/elements/tables.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Tables'
 order: 16
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/tables.mdx'
 ---
 
 <p class="lead">Spruce ships with some basic table styling targeted only with classes to opt-in.</p>
