--- a/src/docs/getting-started/appendix.mdx
+++ b/src/docs/getting-started/appendix.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Appendix'
 order: 8
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/appendix.mdx'
 ---
 
 <p class="lead">In the appendix, you can find some references that inspired or gave any input related to any aspects of Spruce CSS or our learning in general.</p>
