--- a/src/docs/getting-started/contribution.mdx
+++ b/src/docs/getting-started/contribution.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Contribution"
+title: 'Contribution'
 order: 7
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/contribution.mdx'
 ---
 
 <p className="lead">First of all, thank you for considering contributing to Spruce. We appreciate your time and effort in making this CSS system better. We want to make contributing to this project as easy and transparent as possible, whether it's:</p>
