--- a/src/docs/getting-started/internationalization.mdx
+++ b/src/docs/getting-started/internationalization.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Internationalization'
 order: 6
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/internationalization.mdx'
 ---
 
 <p class="lead">Internationalization (i18n) means preparing the code, design to handle different languages and writing modes.</p>
