--- a/src/docs/getting-started/introduction.mdx
+++ b/src/docs/getting-started/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Introduction'
-description: ''
 order: 1
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/introduction.mdx'
 ---
 
 <p className= "lead">Spruce is a Sass-based minimalistic CSS framework that helps you get the foundation right and manage multiple projects better.</p>
