--- a/src/docs/getting-started/sass.mdx
+++ b/src/docs/getting-started/sass.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Sass'
 order: 4
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/sass.mdx'
 ---
 
 <p className="lead">Spruce uses Sass (Syntactically Awesome Style Sheets) to generate CSS code. Sass is a popular and mature CSS extension language that lets us write stylesheets more programmatically.</p>
