--- a/src/docs/getting-started/structure-and-code.mdx
+++ b/src/docs/getting-started/structure-and-code.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Structure and Code'
 order: 3
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/getting-started/structure-and-code.mdx'
 ---
 
 <p class="lead">Spruce tries to be customizable and straightforward. On this page, you can find some core principles and the structure.</p>
