--- a/src/docs/sass/functions.mdx
+++ b/src/docs/sass/functions.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Functions'
 order: 13
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/functions.mdx'
 ---
 
 ## color
