--- a/src/docs/sass/mixins.mdx
+++ b/src/docs/sass/mixins.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Mixins'
 order: 12
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/mixins.mdx'
 ---
 
 ## breakpoint
