--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Variables'
 order: 11
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/sass/variables.mdx'
 ---
 
 <p class="lead">Spruce CSS comes with a bunch of Sass variables. It also uses CSS custom properties for colors and transitions.</p>
