--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -1,6 +1,7 @@
 ---
 title: 'Typography'
 order: 15
+github: 'https://github.com/conedevelopment/sprucecss-site/blob/main/src/docs/elements/typography.mdx'
 ---
 
 <p class="lead">Typography is an essential part of any system. With Spruce, you get basic styles for the most related HTML elements.</p>
