--- a/src/docs/elements/typography.mdx
+++ b/src/docs/elements/typography.mdx
@@ -71,6 +71,28 @@ You can create paragraphs with bigger font-size using the `lead` class.
 
 ## Blockquote
 
+You can use a `blockquote` element with citation:
+
+<Preview>
+  <figure class="quote">
+    <blockquote>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</blockquote>
+    <figcaption>
+      &mdash; Albert Einstein, <cite><a href="https://quoteinvestigator.com/2010/05/04/universe-einstein/">Quote Investigator</a></cite>
+    </figcaption>
+  </figure>
+</Preview>
+
+```html
+<figure class="quote">
+  <blockquote>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</blockquote>
+  <figcaption>&mdash; Albert Einstein,
+    <cite><a href="https://quoteinvestigator.com/2010/05/04/universe-einstein/">Quote Investigator</a></cite>
+  </figcaption>
+</figure>
+```
+
+or without citation:
+
 <Preview>
   <blockquote>
     <p>“Two things are infinite: the universe and human stupidity; and I'm not sure about the universe.”</p>
