--- a/src/docs/sass/variables.mdx
+++ b/src/docs/sass/variables.mdx
@@ -418,6 +418,16 @@ $form-control-padding-sm: 0.25em 0.5em;
 $form-control-padding-lg: 0.75em 1em;
 $form-control-border-width: 1px;
 $form-control-border-radius: $border-radius-sm;
+
+$form-control-color-padding: 0.5em;
+$form-control-color-padding-sm: 0.25em;
+$form-control-color-padding-lg: 0.75em;
+$form-control-color-height: calc(#{$form-control-line-height}em + ( #{$form-control-color-padding} + #{$form-control-border-width} ) * 2);
+$form-control-color-height-sm: calc(#{$form-control-line-height}em + ( #{$form-control-color-padding-sm} + #{$form-control-border-width} ) * 2);
+$form-control-color-height-lg: calc(#{$form-control-line-height}em + ( #{$form-control-color-padding-lg} + #{$form-control-border-width} ) * 2);
+
+$form-control-textarea-height: 6rem;
+
 ```
 
 ### Check
